# matataki-backend

./: .dockerignore  .eslintrc  .gitignore  Dockerfile  README.md  app.js  db-dump.sql  db_memo.sql  doc.md  docker-compose.yml  ipfs-backup.sh  jsconfig.json  package.json  server-deployment.md
app/: app.js  passport.js  router.js  router.js.orig
app/constant/: Enums.js
app/controller/: ads.js  alipay.js  asset.js  auth.js  comment.js  crossChain.js  daothon.js  dev.js  directTrade.js  downloader.js  drafts.js  exchange.js  favorites.js  follow.js  geetest.js  github.js  hCaptcha.js  home.js  metaSpaceMigration.js  mineToken.js  mineTokenApplication.js  mining.js  nft.js  notification.js  notify.js  order.js  oss.js  post.js  postDashboard.js  search.js  share.js  support.js  tag.js  timedPost.js  timeline.js  timemachine.js  token.js  user.js  wechat.js  wxpay.js
app/core/: base_controller.js
app/extend/: codebird.js  helper.js
app/middleware/: error_handler.js  hcaptcha.js
app/schedule/: action_reader.js  action_updater.js  cache_updater.js  calculate_hot_score.js  hot_cal.js  (+24 more)
config/: apiaccesstoken_template.js  config.default.js  config.default_template.js  eos.js  message.js  plugin.js  wechat_config_template.js  wechat_menu.json
database/: db_memo.sql
docker-compose-test/: README.md  docker-compose.yml  env.js  nginx.conf
docs/: api.md  deployment.md  post.md  search.md  user.md
scripts/: carttoEls.js  config.json
smartsignature/: CMakeLists.txt  README.txt  cmd
smartsignature/src/: CMakeLists.txt  smartsignature.cpp
uploads/: doc.md
(+106 files in other folders)
